[gd_scene load_steps=4 format=3 uid="uid://d3vvjko2h2byy"]

[ext_resource type="Script" path="res://scripts/menu/end_game.gd" id="1_o6jum"]

[sub_resource type="LabelSettings" id="LabelSettings_vadpd"]
font_size = 50
font_color = Color(1, 0.458824, 0.109804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xkb1r"]
font_size = 15
font_color = Color(0.934875, 0.518437, 0, 1)

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_o6jum")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 721.0
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1280.0
offset_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="title" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_vadpd")
horizontal_alignment = 1

[node name="reason" type="Label" parent="CenterContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "..."
label_settings = SubResource("LabelSettings_xkb1r")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="retry" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="main_menu" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="quit" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
